@@ -5,21 +5,22 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import javax.servlet.http.HttpServletRequest;
 import java.lang.reflect.Field;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
 import java.sql.ResultSet;
-import java.sql.SQLException;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
 
 public class AppUtil {
-    private static final ObjectMapper mapper = new ObjectMapper();
-
+    public static final ObjectMapper mapper;
+    static {
+        mapper = new ObjectMapper();
+    }
     public static Object getObject(HttpServletRequest request, Class clazz) {
         // tạo object bằng contructor không tham số.
         Object object;
         try {
-            object = clazz.newInstance();
-        } catch (Exception e) {
+            object = clazz.getDeclaredConstructor().newInstance();
+        }catch (Exception e){
             System.out.println(e.getMessage());
             return null;
         }
@@ -28,19 +29,25 @@ public class AppUtil {
         while (paramNames.hasMoreElements()) {
             String paramName = paramNames.nextElement();
 
-            if (AppConstant.ACTION.equals(paramName)) {
+            if(AppConstant.ACTION.equals(paramName)){
                 continue;
             }
+
             System.out.println(request.getParameter(paramName));
             // Use reflection to set the parameter value to the corresponding field in the User class
             try {
-                // lấy value ra
                 String paramValue = mapper.writeValueAsString(request.getParameter(paramName));
-                Field field = clazz.getDeclaredField(paramName);
-                field.setAccessible(true); // Set accessible, as the fields may be private
-                Class<?> fieldType = field.getType();
 
-                var value = mapper.readValue(paramValue, fieldType);
+
+
+                // lấy value ra
+
+                Field field = clazz.getDeclaredField(paramName);
+                var fieldType = field.getType();
+                field.setAccessible(true); // Set accessible, as the fields may be private
+
+
+                var value = mapper.readValue(paramValue,fieldType);
                 field.set(object, value);
                 //set cho tung field
                 // Add more type conversions as needed for other field types (e.g., boolean, double, etc.)
@@ -54,13 +61,12 @@ public class AppUtil {
         }
         return object;
     }
-
-    public static Object getObjectWithValidation(HttpServletRequest request, Class clazz, Map<String, RunnableCustom> validators) {
+    public static Object getObjectWithValidation(HttpServletRequest request, Class clazz, Map<String, RunnableCustom> validators){
         // tạo object bằng contructor không tham số.
         Object object;
         try {
             object = clazz.newInstance();
-        } catch (Exception e) {
+        }catch (Exception e){
             System.out.println(e.getMessage());
             return null;
         }
@@ -68,17 +74,31 @@ public class AppUtil {
         java.util.Enumeration<String> paramNames = request.getParameterNames();
         while (paramNames.hasMoreElements()) {
             String paramName = paramNames.nextElement();
-
-            if (AppConstant.ACTION.equals(paramName)) {
+            if(AppConstant.ACTION.equals(paramName)){
                 continue;
             }
+
             System.out.println(request.getParameter(paramName));
             // Use reflection to set the parameter value to the corresponding field in the User class
             try {
                 // lấy value ra
                 String paramValue = mapper.writeValueAsString(request.getParameter(paramName));
+                if(paramName.contains("_")){
+                    //handle cho việc object lồng object.
+                    String[] fields = paramName.split("_");
+                    Field field = clazz.getDeclaredField(fields[0]);
+                    field.setAccessible(true); // chuyen public
+                    var fieldType = field.getType(); // class Name
+                    var objectChild = fieldType.newInstance(); // tạo 1 object
+                    field.set(object, objectChild);
+                    Field fieldChild = fieldType.getDeclaredField(fields[1]); // field object con
+                    fieldChild.setAccessible(true);
+                    var value = mapper.readValue(paramValue,fieldChild.getType());
+                    fieldChild.set(objectChild, value);
+                    continue;
+                }
                 RunnableCustom validator = validators.get(paramName);
-                if (validator != null) {
+                if(validator != null){
                     validator.setValue(request.getParameter(paramName));
                     validator.run();
                 }
@@ -86,11 +106,11 @@ public class AppUtil {
                 field.setAccessible(true); // Set accessible, as the fields may be private
                 Class<?> fieldType = field.getType();
 
-                var value = mapper.readValue(paramValue, fieldType);
+                var value = mapper.readValue(paramValue,fieldType);
                 field.set(object, value);
                 //set cho tung field
                 // Add more type conversions as needed for other field types (e.g., boolean, double, etc.)
-            } catch (NoSuchFieldException | IllegalAccessException | NumberFormatException e) {
+            } catch (NoSuchFieldException | IllegalAccessException | NumberFormatException | InstantiationException e) {
                 // Handle exceptions as needed
                 System.out.println(e.getMessage());
             } catch (JsonProcessingException e) {
@@ -101,8 +121,111 @@ public class AppUtil {
         return object;
     }
 
+    public static Object getParameterWithDefaultValue(HttpServletRequest request, String name, Object valueDefault){
+        String value = request.getParameter(name);
+        if(value == null)return valueDefault;
+        return value;
+    }
 
-    public static <T> T getObjdectResultSet(ResultSet rs, Class<T> clazz) throws SQLException {
+    public static String buildInsertSql(String tableName, Object object) {
+        List<Object> arrayValue = new ArrayList<>();
+        StringBuilder sql = new StringBuilder("INSERT INTO " + tableName + " (");
+        try{
+            Object value = null;
+            Field[] fields = object.getClass().getDeclaredFields();
+            for (int i = 0; i < fields.length; i++) {
+                Field field = fields[i];
+                String fieldName = field.getName();
+                field.setAccessible(true);
+                value = field.get(object);
+
+                if (fieldName.equals("serialVersionUID") || fieldName.equals("id") || value == null) {
+                    continue;
+                }
+
+                var sqlAppendField = new StringBuilder(camelCaseToSnakeCase(fieldName));
+
+                if(!field.getType().isEnum() && field.getType().getName().contains("Model")){
+                    sqlAppendField = new StringBuilder(camelCaseToSnakeCase(fieldName) + "_id");
+                    var objectChild = field.get(object);
+                    var fieldId =objectChild.getClass().getDeclaredField("id");
+                    fieldId.setAccessible(true);
+                    value = fieldId.get(objectChild);
+                }
+                arrayValue.add(value);
+                sql.append(sqlAppendField);
+                if (i < fields.length - 1) {
+                    sql.append(",");
+                }
+            }
+            sql.append(") VALUES (");
+            for (int i = 0; i < arrayValue.size(); i++) {
+                sql.append("'").append(arrayValue.get(i)).append("'");
+                if (i < arrayValue.size() - 1) {
+                    sql.append(",");
+                }
+            }
+            sql.append(")");
+        }catch (Exception e){
+            System.out.println(e.getMessage());
+        }
+
+        return sql.toString();
+    }
+    public static String buildUpdateSql(String tableName, Object object) {
+        StringBuilder sql = new StringBuilder("UPDATE " + tableName + " SET ");
+        Object id = 0L;
+        try {
+            Field[] fields = object.getClass().getDeclaredFields();
+            for (int i = 0; i < fields.length; i++) {
+                Field field = fields[i];
+                field.setAccessible(true);
+                String fieldName = field.getName();
+                Object value = field.get(object);
+                if(fieldName.equals("id")){
+                    id = value;
+                }
+                if (fieldName.equals("serialVersionUID")
+                        || fieldName.equals("id")
+                        || value == null) {
+                    continue;
+                }
+                if(!field.getType().isEnum() && field.getType().getName().contains("Model")){
+
+                    Field fld = object.getClass().getDeclaredField(fieldName);
+                    fld.setAccessible(true);
+                    var objectChild = fld.get(object);
+                    var fieldIdChild = objectChild.getClass().getDeclaredField("id");
+                    fieldIdChild.setAccessible(true);
+                    var idChild = fieldIdChild.get(objectChild);
+                    sql.append(camelCaseToSnakeCase(fieldName + "_id")).append("='").append(idChild).append("'");
+                    sql.append(",");
+                    continue;
+                }
+                sql.append(camelCaseToSnakeCase(fieldName)).append("='").append(value).append("'");
+
+                sql.append(",");
+            }
+            sql.deleteCharAt(sql.length() -1);
+            sql.append(" WHERE (id = '").append(id).append("')");
+        }catch (Exception e){
+            System.out.println(e.getMessage());
+        }
+
+        return sql.toString();
+    }
+    private static boolean isExcluded(String fieldName, String[] excludedFields) {
+        for (String excludedField : excludedFields) {
+            if (excludedField.equals(fieldName)) {
+                return true;
+            }
+        }
+        return false;
+    }
+    public static String camelCaseToSnakeCase(String camelCase) {
+        return camelCase.replaceAll("(.)(\\p{Upper})", "$1_$2").toLowerCase();
+    }
+    public static <T> T getObjectFromResultSet(ResultSet rs, Class<T> clazz) {
         T object;
         try {
             object = clazz.getDeclaredConstructor().newInstance();
@@ -110,7 +233,6 @@ public class AppUtil {
             e.printStackTrace();
             return null;
         }
-
         Field[] fields = clazz.getDeclaredFields();
         for (Field field : fields) {
             try {
@@ -118,8 +240,23 @@ public class AppUtil {
                 if (fieldName.equals("serialVersionUID")) {
                     continue;
                 }
+
                 field.setAccessible(true);
                 Class<?> fieldType = field.getType();
+                if(!fieldType.isEnum() && fieldType.getPackage().getName().contains("Model")){
+                    var objectChild = fieldType.getDeclaredConstructor().newInstance();
+                    for (var fieldChild: fieldType.getDeclaredFields()) {
+                        String fieldChildName = fieldChild.getName();
+                        fieldChild.setAccessible(true);
+                        String paramValue = mapper
+                                .writeValueAsString(rs.getObject
+                                        (camelCaseToSnakeCase(fieldName)+ "." +camelCaseToSnakeCase(fieldChildName)));
+                        Object value = mapper.readValue(paramValue, fieldChild.getType());
+                        fieldChild.set(objectChild, value);
+                    }
+                    field.set(object, objectChild);
+                    continue;
+                }
 
                 String paramValue = mapper.writeValueAsString(rs.getObject(camelCaseToSnakeCase(fieldName)));
                 Object value = mapper.readValue(paramValue, fieldType);
@@ -128,132 +265,7 @@ public class AppUtil {
                 e.printStackTrace();
             }
         }
-
         return object;
-    }
-
-    public static String camelCaseToSnakeCase(String input) {
-        if (input == null || input.isEmpty()) {
-            return "";
-        }
-        StringBuilder result = new StringBuilder();
-        char prevChar = '\0';
-
-        for (char currentChar : input.toCharArray()) {
-            if (Character.isUpperCase(currentChar)) {
-                if (prevChar != '\0' && !Character.isUpperCase(prevChar)) {
-                    result.append('_');
-                }
-                result.append(Character.toLowerCase(currentChar));
-            } else {
-                result.append(currentChar);
-            }
-            prevChar = currentChar;
-        }
-        return result.toString();
-    }
-
-    public static <T> void saveObjectToDatabase(Connection connection, String tableName, T object, String... excludedFields) throws SQLException {
-        String sql;
-        Field idField;
-        try {
-            idField = object.getClass().getDeclaredField("id");
-            idField.setAccessible(true);
-            Long idValue = (Long) idField.get(object);
-            if (idValue != null) {
-                sql = buildUpdateSql(tableName, object, excludedFields);
-            } else {
-                sql = buildInsertSql(tableName, object, excludedFields);
-            }
-        } catch (NoSuchFieldException | IllegalAccessException e) {
-            e.printStackTrace();
-            return;
-        }
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(sql)) {
-            int parameterIndex = 1;
-            Field[] fields = object.getClass().getDeclaredFields();
-            for (Field field : fields) {
-                String fieldName = field.getName();
-                if (fieldName.equals("serialVersionUID") || isExcluded(fieldName, excludedFields)) {
-                    continue;
-                }
-                field.setAccessible(true);
-                Class<?> fieldType = field.getType();
-                try {
-                    Object value = field.get(object);
-                    preparedStatement.setObject(parameterIndex, value);
-                    parameterIndex++;
-                } catch (IllegalAccessException e) {
-                    e.printStackTrace();
-                }
-            }
-            if (sql.contains("UPDATE")) {
-                // Set the id value for the WHERE clause in the UPDATE statement
-                preparedStatement.setLong(parameterIndex, (Long) idField.get(object));
-            }
-            preparedStatement.executeUpdate();
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-
-    private static String buildInsertSql(String tableName, Object object, String... excludedFields) {
-        String sql = "INSERT INTO " + tableName + " (";
-        Field[] fields = object.getClass().getDeclaredFields();
-        for (int i = 0; i < fields.length; i++) {
-            Field field = fields[i];
-            String fieldName = field.getName();
-            if (fieldName.equals("serialVersionUID") || fieldName.equals("id") || isExcluded(fieldName, excludedFields)) {
-                continue;
-            }
-            sql += camelCaseToSnakeCase(fieldName);
-            if (i < fields.length - 1) {
-                sql += ",";
-            }
-        }
-        sql += ") VALUES (";
-        for (int i = 0; i < fields.length; i++) {
-            Field field = fields[i];
-            String fieldName = field.getName();
-            if (fieldName.equals("serialVersionUID") || fieldName.equals("id") || isExcluded(fieldName, excludedFields)) {
-                continue;
-            }
-            sql += "?";
-            if (i < fields.length - 1) {
-                sql += ",";
-            }
-        }
-        sql += ")";
-        return sql;
-    }
-
-    private static String buildUpdateSql(String tableName, Object object, String... excludedFields) {
-        String sql = "UPDATE " + tableName + " SET ";
-        Field[] fields = object.getClass().getDeclaredFields();
-        for (int i = 0; i < fields.length; i++) {
-            Field field = fields[i];
-            String fieldName = field.getName();
-            if (fieldName.equals("serialVersionUID") || fieldName.equals("id") || isExcluded(fieldName, excludedFields)) {
-                continue;
-            }
-            sql += camelCaseToSnakeCase(fieldName) + "=?";
-            if (i < fields.length - 1) {
-                sql += ",";
-            }
-        }
-        sql += " WHERE (id = ?)";
-        return sql;
-    }
-
-
-    private static boolean isExcluded(String fieldName, String[] excludedFields) {
-        for (String excludedField : excludedFields) {
-            if (excludedField.equals(fieldName)) {
-                return true;
-            }
-        }
-        return false;
     }
 
 }
